# intercom-system

./: .gitignore  companion_librelight_integration.md
Kesher/: .gitignore  .pre-commit-config.yaml  AGENTS.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  TODO.md  config.yaml.example  package.json
Kesher/.github/workflows/: release-binaries.yml
Kesher/backend/: Dockerfile  Dockerfile.bak  go.mod  go.sum  image-effect-map.json
Kesher/deploy/compose/: .env.certmagic.example  docker-compose.certmagic.yml  docker-compose.selfsigned.yml  docker-compose.yml
Kesher/desktop/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
Kesher/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
Kesher/desktop/src-tauri/.cargo/: config.toml
Kesher/desktop/src-tauri/icons/: icon.icns
Kesher/desktop/src-tauri/src/: audio_engine.rs  audio_native.rs  config.rs  main.rs
Kesher/docs/: COMPANION-SETUP.md  IMAGE-STREAM-BRIDGE.md  RASPBERRY-PI-KIOSK.md  TELEGRAM-BOT-SETUP.md  architecture-flow-diagram.md  bitfocus-companion-integration-plan.md  implementation-plan.md
Kesher/server-config/: Caddyfile  kesher.service
Kesher/web/: index.html  package.json  tsconfig.json  vite.config.ts
companion/: .gitignore  .pre-commit-config.yaml  COMPANION_IMAGE_SETUP_CHECKLIST.md  README.md  kesher-0.2.4.tgz  package.json
companion/companion/: manifest.json
companion/src/: actions.ts  config.ts  feedbacks.ts  imageBridge.ts  imageRenderer.ts  main.ts  presets.ts  types.ts  upgrades.ts  variables.ts
scripts/: deploy-companion-module.sh
(+55 files in other folders)
