[package]
name = "kesher_desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1.1", features = [] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
# Native audio pipeline dependencies (CPAL + Opus) are needed on Windows
# (WASAPI) and macOS (Core Audio). webrtc-rs is currently only used by the
# Windows pipeline; the native UDP performance path on macOS uses raw
# tokio::net::UdpSocket and does not require webrtc-rs.
cpal = "0.15"
opus = "0.3"
bytes = "1"
serde_yaml = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
# WebRTC stack remains Windows-only for now; macOS uses the native UDP
# pipeline plus the existing browser fallback.
webrtc = "0.12"
